# graphkb

./: .env.example  .gitignore  .prettierignore  ONBOARDING.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json
docs/: design.md  diagrams.html  rhizomatic-design-doc.md
docs/adrs/: 001-typescript-over-rust.md  002-docker-compose-to-k3s.md  003-effect-over-fp-ts.md  004-typed-relationship-composition.md  005-committed-tools-roadmap.md  006-async-ingestion-pipeline-bullmq.md  007-binary-extraction-tika.md  008-infrastructure-as-code-terraform.md
docs/guides/: getting-started.md
infra/: docker-compose.yml
infra/terraform/: .gitignore  README.md
infra/terraform/environments/dev/: main.tf
infra/terraform/environments/prod/: main.tf
infra/terraform/environments/staging/: main.tf
infra/terraform/modules/app/: main.tf
infra/terraform/modules/ecs-cluster/: main.tf
infra/terraform/modules/elasticsearch/: main.tf
infra/terraform/modules/monitoring/: main.tf
infra/terraform/modules/neo4j/: main.tf
infra/terraform/modules/network/: main.tf
infra/terraform/modules/redis/: main.tf
infra/terraform/modules/tika/: main.tf
services/: pyproject.toml
services/embedder/: worker.py
services/ocr/: worker.py
services/processor/: worker.py
